mojora de conectores

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   
 
 
-  <section class="tituloContacto">
+  <section class="tituloContacto" id="contacto">
 
    <div class="contacto"><h1>Contacto</h1></div>
     
@@ -360,47 +360,11 @@
 
 
 
-<section class="footer" id="contacto">
+<section class="footer">
 
 <h4>Hecho con ❤️ en academlo</h4>
 
 </section>
-
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
