--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header class="topheader">
     <nav class="topnav">
       <a href="#" class="logo"> 
-        <img height="50" width="50" src="" alt="" />
+        <img height="50" width="50" src="/img/logo_academlo 5.png" alt="" />
 
       </a>
       <button class="open-menu">
