--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   
   <section class="containerAcercaDeMi" id="sobreMi">
     <article class="descripcion-containerAcercaDeMi">
-      <h1>acerca de mi</h1>
+      <h1>Acerca de mi</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem aliquid perferendis velit dignissimos
         non at tempore perspiciatis fugit ab ex similique, porro alias autem repudiandae quaerat adipisci accusamus
         dolorem est?</p>
