--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <section class="containerSociales">
     <div class="logo">
-      <img src="/Portafolio 7/Íconos/linkedin.svg" alt="">
+      <img src="/img/Íconos/linkedin.svg" alt="">
     </div>
 
     <div class="logo">
